src/css/site.css
:root {
	--font-family: "rotunda-variable", "Source Sans Pro", "Helvetica Neue", "Helvetica",
		sans-serif;
	--header-font: var(--font-family);
	--mono-font-family: "Iosevka RLTB Mono", monospace;
	--mono-font-size: 0.95em;
	--body-letter-spacing: -0.03em;
	--default-font-weight: 350;
	--bold-font-weight: 575;
	--header-bar-height: 3rem;
	--toolbar-height: 2.5rem;

	--icon-path-back: url(../img/light-theme/back.svg);
	--icon-path-caret: url(../img/light-theme/caret.svg);
	--icon-path-chevron: url(../img/light-theme/chevron.svg);
	--icon-path-home-o: url(../img/light-theme/home-o.svg);
	--icon-path-home: url(../img/light-theme/home.svg);
	--icon-path-menu: url(../img/light-theme/menu.svg);
	--icon-path-octicons-16: url(../img/light-theme/octicons-16.svg);
	--logo-mask-path-github: url(../img/light-theme/github-mark.svg);

	--default-transition: all 0.125s ease, visibility 0s, display 0s;

	--default-bg-color: white;
	--default-text-color: #080808;
	--doc-text-color: #111111;
	--toolbar-bg-color: var(--navbar-header-bg-color);
	--toolbar-text-color: #444444;
	--toolbar-link-hover-color: #747474;
	--toolbar-border-top-color: #e5e5e5;
	--toolbar-border-top: 2px solid var(--toolbar-border-top-color);
	--top-bar-bg-color: #0970c4;
	--navbar-bg-color: #f1f1f1;
	--navbar-header-bg-color: #fafafa;
	--navbar-shadow-color-1: #dedede;
	--navbar-shadow-color-2: #e1e1e1;
	--navbar-title-color: #424242;
	--navbar-text-color: var(--default-text-color);
	--navbar-text-color-faint: #5d5d5d;
	--navbar-item-outline-color: #c1c1c1;
	--page-version-gradient-color: #f0f0f0;
	--page-version-missing-text-color: #8e8e8e;

	--toc-text-color: #5d5d5d;
	--toc-title-color: #333333;
	--toc-left-border-color: #e1e1e1;
	--search-text-color: #333333;
	--search-border-color: #dbdbdb;
	--search-disabled-color: #4c4c4c;

	--mark-bg-color: #ff0;
	--mark-text-color: black;
	--fieldset-border-color: #c0c0c0;
	--body-bg-color: white;
	--body-text-color: black;
	--title-text-color: #111;
	--link-text-color: #0a6bac;
	--link-hover-color: #2391db;
	--visited-link-text-color: rgb(124, 58, 156);
	--visited-link-hover-color: rgb(165, 88, 203);
	--link-focus-text-color: #229ea7;
	--github-icon-color: #111;
	--header-text-color: #111;
	--small-header-text-color: #5e5e5e;
	--h-rule-color: #ddd;
	--code-text-color: #222;
	--abbrev-text-color: #222;
	--abbrev-border-color: #ddd;
	--blockquote-bg-color: #f6f6f6;
	--blockquote-border-color: #ddd;
	--blockquote-cite-color: #555;
	--blockquote-text-color: #262628;
	--vcard-text-color: #ddd;
	--table-bg-color: var(--default-bg-color);
	--table-border-color: #ddd;
	--table-head-foot-gradient-start-color: #f1f1f1;
	--table-head-foot-gradient-end-color: #e5e5e5;
	--table-text-color: #222;
	--table-stripe-bg-color: #f9f9f9;
	--code-parent-bg-color: #f9f9f9;
	--code-parent-border-color: #ddd;
	--inline-code-border-color: #eee;
	--pre-code-text-color: rgb(0, 0, 0);
	--kbd-keyseq-text-color: rgb(167, 167, 167);
	--kbd-text-shadow-color: rgb(255, 255, 255);
	--kbd-not-keyseq-text-color: rgb(43, 43, 43);
	--kbd-not-keyseq-bg-color: #ebebeb;
	--kbd-not-keyseq-border-color: rgb(173, 173, 173);
	--kbd-not-keyseq-box-shadow-color: rgba(83, 83, 83, 0.2);
	--kbd-not-keyseq-box-shadow-alt-color: white;
	--menu-text-color: #090909;
	--p-a-code-hover-text-color: #151515;
	--header-h1-text-color: black;
	--header-h1-border-color: #ddd;
	--header-span-text-color: #6f6f6f;
	--footer-bg-color: rgb(210, 217, 231);
	--footer-text-color: rgb(27, 27, 27);
	--sec1-sect1-border-color: #ddd;
	--header-link-text-color: #111;
	--header-link-hover-text-color: #040404;
	--admonition-bg-color: #f0f0f0;
	--admonition-border-color: #ddd;
	--admonition-text-color: #4d4d4d;
	--example-border-color: #e6e6e6;
	--example-bg-color: white;
	--example-text-color: #333;
	--example-shadow-color: #d9d9d9;
	--sidebar-border-color: #d9d9d9;
	--sidebar-bg-color: #f2f2f2;
	--sidebar-text-color: #111;
	--sidebar-title-text-color: #111;
	--listing-bg-color: rgb(240, 240, 240);
	--listing-text-color: rgb(46, 46, 46);
	--pygments-text-color: #999;
	--pygments-border-color: #ddd;
	--quote-border-color: #ddd;
	--quote-attribution-text-color: #555;
	--table-grid-color: #ddd;
	--tableblockheader-text-color: #222;
	--qanda-em-text-color: #1f37be;
	--thumb-border-color: white;
	--thumb-shadow-color: #ddd;
	--gist-table-bg-color: white;
	--admon-text-color: white;
	--admon-shadow-color: rgba(0, 0, 0, 0.5);
	--admon-note-icon-color: #217ee7;
	--admon-tip-shadow-color: rgba(155, 155, 0, 0.8);
	--admon-tip-icon-color: #41af46;
	--admon-warning-icon-color: #f8b90a;
	--admon-caution-icon-color: #bf3400;
	--admon-important-icon-color: #bf0000;
	--conum-text-color: white;
	--conum-bg-color: #222;
	--hdlist-table-row-border-color: #ccc;
}
/* ... */

